--- a/src/components/Contactform/Contactform.css
+++ b/src/components/Contactform/Contactform.css
@@ -68,3 +68,7 @@ ul.show-menu {
 .note {
     padding: 15px;
 }
+
+.messageholder {
+    padding: 0.7rem;
+}
