--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -28,7 +28,7 @@
   }
 
 header {
-    /* height: 90vh; */
+    height: 90vh;
     display:flex;
     align-items: center;
     justify-content: center;
