--- a/src/index.css
+++ b/src/index.css
@@ -19,5 +19,4 @@ code {
 
 .skill-title {
   font-size: 70px;
-  padding-top: 100px;
 }
